--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "yuncms/yii2-attachment",
+  "name": "yuncms/yuncms-attachment",
   "description": "The attachment module for yuncms.",
   "keywords": [
     "yii2",
